--- a/public/styles.css
+++ b/public/styles.css
@@ -1,6 +1,5 @@
 body {
   background-color: #538cc6;
-  /*color: white;*/
   font-family: 'Open Sans', sans-serif;
 }
 
@@ -33,8 +32,40 @@ a {
   color: black;
 }
 
+.about, .projects {
+  padding: 25px;
+}
+
+.work {
+  background-color: #f3f3f3;
+  width: 100%;
+}
+
+.projects {
+  background-color: #f3f3f3;
+  text-align: justify;
+  overflow: hidden;
+  margin: 25px;
+}
+
+.projects img {
+  margin-right: 15px;
+  margin-left: 15px;
+  float: left;
+}
+
+.description {
+  margin: 15px;
+}
+
+.screenshot{
+  width: 40%;
+}
+
 input, textarea {
   margin-bottom: 15px;
+  border-radius: 5px;
+  font-size: 16px;
 }
 
 form {
@@ -44,6 +75,14 @@ form {
 }
 
 .form {
-  background-color: silver;
+  background-color: #f3f3f3;
   padding: 20px;
+}
+
+.red {
+  color: red;
+}
+
+.green {
+  color: green;
 }
