--- a/public/styles.css
+++ b/public/styles.css
@@ -14,7 +14,7 @@ h1, h2, h3 {
 
 #headshot {
   border-radius: 100%;
-  height: 200px;
+  height: 250px;
   border: 3px solid black;
 }
 
@@ -27,13 +27,23 @@ i {
   margin: 15px;
 }
 
-a {
+a.icon {
   text-decoration: none;
   color: black;
 }
 
 .about, .projects {
   padding: 25px;
+}
+
+span.link  {
+  display: inline;
+  font-family: 'Open Sans', sans-serif;
+  font-size: 16px;
+}
+
+.about {
+  background-color: #538cc6;
 }
 
 .work {
@@ -69,7 +79,6 @@ input, textarea {
 }
 
 form {
-  margin-left: 32%;
   width: 30%;
   text-align: left;
 }
@@ -85,4 +94,10 @@ form {
 
 .green {
   color: green;
+}
+
+button {
+  padding: 5px;
+  border-radius: 5px;
+  background-color: #538cc6;
 }
