--- a/public/styles.css
+++ b/public/styles.css
@@ -21,6 +21,7 @@ h1, h2, h3 {
 header {
   margin-top: 50px;
   text-align: center;
+  margin-bottom: 50px;
 }
 
 i {
@@ -50,6 +51,7 @@ span.link  {
 .work {
   background-color: #f3f3f3;
   width: 100%;
+  height: 25px;
 }
 
 #sample {
